// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Contamination sequence regression > 10-session divergence-dominant sequence 1`] = `
[
  {
    "convergence": 0,
    "depth": 1,
    "divergence": 0.685714,
    "drift": 0.0885,
    "fixation": 0,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 2,
    "divergence": 1,
    "drift": 0.16815,
    "fixation": 0,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 3,
    "divergence": 1,
    "drift": 0.239835,
    "fixation": 0,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 4,
    "divergence": 1,
    "drift": 0.304352,
    "fixation": 0,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 5,
    "divergence": 1,
    "drift": 0.362416,
    "fixation": 0,
    "heterogeneity": 0,
    "stage": "biased_inclination",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 6,
    "divergence": 1,
    "drift": 0.414675,
    "fixation": 0,
    "heterogeneity": 0,
    "stage": "biased_inclination",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 7,
    "divergence": 1,
    "drift": 0.461707,
    "fixation": 0,
    "heterogeneity": 0,
    "stage": "biased_inclination",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 8,
    "divergence": 1,
    "drift": 0.504037,
    "fixation": 0,
    "heterogeneity": 0,
    "stage": "biased_inclination",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 9,
    "divergence": 1,
    "drift": 0.542133,
    "fixation": 0,
    "heterogeneity": 0,
    "stage": "biased_inclination",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 10,
    "divergence": 1,
    "drift": 0.57642,
    "fixation": 0,
    "heterogeneity": 0,
    "stage": "biased_inclination",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
]
`;

exports[`Contamination sequence regression > 20-session convergence-dominant sequence (high fixation) 1`] = `
[
  {
    "convergence": 0,
    "depth": 1,
    "divergence": 0.004762,
    "drift": 0.00625,
    "fixation": 0.091694,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 2,
    "divergence": 0.009307,
    "drift": 0.011875,
    "fixation": 0.174219,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0.313043,
    "depth": 3,
    "divergence": 0.013655,
    "drift": 0.016938,
    "fixation": 0.248492,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 0.029094,
    "stage_2": 0,
    "stage_3": 0.970906,
  },
  {
    "convergence": 0.613043,
    "depth": 4,
    "divergence": 0.017822,
    "drift": 0.021494,
    "fixation": 0.315337,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 0.011124,
    "stage_2": 0,
    "stage_3": 0.988876,
  },
  {
    "convergence": 0.901043,
    "depth": 5,
    "divergence": 0.021822,
    "drift": 0.025594,
    "fixation": 0.375498,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 0.002391,
    "stage_2": 0,
    "stage_3": 0.997609,
  },
  {
    "convergence": 1,
    "depth": 6,
    "divergence": 0.025668,
    "drift": 0.029285,
    "fixation": 0.429643,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 7,
    "divergence": 0.029372,
    "drift": 0.032606,
    "fixation": 0.478373,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 8,
    "divergence": 0.032943,
    "drift": 0.035596,
    "fixation": 0.52223,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 9,
    "divergence": 0.036391,
    "drift": 0.038286,
    "fixation": 0.561701,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 10,
    "divergence": 0.039725,
    "drift": 0.040708,
    "fixation": 0.597226,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 11,
    "divergence": 0.042951,
    "drift": 0.042887,
    "fixation": 0.629198,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 12,
    "divergence": 0.046076,
    "drift": 0.044848,
    "fixation": 0.657972,
    "heterogeneity": 0,
    "stage": "hypercompletion",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 13,
    "divergence": 0.049106,
    "drift": 0.046613,
    "fixation": 0.683869,
    "heterogeneity": 0,
    "stage": "hypercompletion",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 14,
    "divergence": 0.052047,
    "drift": 0.048202,
    "fixation": 0.707177,
    "heterogeneity": 0,
    "stage": "hypercompletion",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 15,
    "divergence": 0.054904,
    "drift": 0.049632,
    "fixation": 0.728154,
    "heterogeneity": 0,
    "stage": "hypercompletion",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 16,
    "divergence": 0.057682,
    "drift": 0.050919,
    "fixation": 0.747033,
    "heterogeneity": 0,
    "stage": "hypercompletion",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 17,
    "divergence": 0.060385,
    "drift": 0.052077,
    "fixation": 0.764024,
    "heterogeneity": 0,
    "stage": "hypercompletion",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 18,
    "divergence": 0.063016,
    "drift": 0.053119,
    "fixation": 0.779316,
    "heterogeneity": 0,
    "stage": "hypercompletion",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 19,
    "divergence": 0.06558,
    "drift": 0.054057,
    "fixation": 0.793079,
    "heterogeneity": 0,
    "stage": "hypercompletion",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
  {
    "convergence": 1,
    "depth": 20,
    "divergence": 0.06808,
    "drift": 0.054901,
    "fixation": 0.805465,
    "heterogeneity": 0,
    "stage": "hypercompletion",
    "stage_1": 0,
    "stage_2": 0,
    "stage_3": 1,
  },
]
`;

exports[`Contamination sequence regression > Welford mean/M2 determinism — same sequence always produces same state 1`] = `
[
  {
    "convergence": 0,
    "depth": 1,
    "divergence": 0.4,
    "drift": 0.0525,
    "fixation": 0.004,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 2,
    "divergence": 0.454545,
    "drift": 0.06775,
    "fixation": 0.015933,
    "heterogeneity": 0.32,
    "stage": "stable",
    "stage_1": 0.780275,
    "stage_2": 0.219725,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 3,
    "divergence": 0.941502,
    "drift": 0.121475,
    "fixation": 0.04584,
    "heterogeneity": 0.373333,
    "stage": "stable",
    "stage_1": 0.807808,
    "stage_2": 0.192192,
    "stage_3": 0,
  },
  {
    "convergence": 0.3,
    "depth": 4,
    "divergence": 0.945669,
    "drift": 0.115578,
    "fixation": 0.1142,
    "heterogeneity": 0.533333,
    "stage": "stable",
    "stage_1": 0.538783,
    "stage_2": 0.347269,
    "stage_3": 0.113948,
  },
  {
    "convergence": 0.312,
    "depth": 5,
    "divergence": 1,
    "drift": 0.14402,
    "fixation": 0.10678,
    "heterogeneity": 0.4,
    "stage": "stable",
    "stage_1": 0.539523,
    "stage_2": 0.313676,
    "stage_3": 0.146801,
  },
]
`;

exports[`Contamination sequence regression > alternating high/low alignment → heterogeneity spike 1`] = `
[
  {
    "convergence": 0,
    "depth": 1,
    "divergence": 0.047619,
    "drift": 0.022,
    "fixation": 0.023444,
    "heterogeneity": 0,
    "stage": "stable",
    "stage_1": 1,
    "stage_2": 0,
    "stage_3": 0,
  },
  {
    "convergence": 0,
    "depth": 2,
    "divergence": 0.45671,
    "drift": 0.0778,
    "fixation": 0.0251,
    "heterogeneity": 1,
    "stage": "stable",
    "stage_1": 0.533098,
    "stage_2": 0.466902,
    "stage_3": 0,
  },
  {
    "convergence": 0.023478,
    "depth": 3,
    "divergence": 0.500188,
    "drift": 0.09202,
    "fixation": 0.046034,
    "heterogeneity": 0.853333,
    "stage": "stable",
    "stage_1": 0.486553,
    "stage_2": 0.510017,
    "stage_3": 0.00343,
  },
  {
    "convergence": 0.023478,
    "depth": 4,
    "divergence": 0.875188,
    "drift": 0.140818,
    "fixation": 0.045431,
    "heterogeneity": 0.853333,
    "stage": "stable",
    "stage_1": 0.554691,
    "stage_2": 0.443074,
    "stage_3": 0.002235,
  },
  {
    "convergence": 0.045078,
    "depth": 5,
    "divergence": 0.915188,
    "drift": 0.148736,
    "fixation": 0.064332,
    "heterogeneity": 0.768,
    "stage": "stable",
    "stage_1": 0.52889,
    "stage_2": 0.464781,
    "stage_3": 0.006329,
  },
  {
    "convergence": 0.045078,
    "depth": 6,
    "divergence": 1,
    "drift": 0.191863,
    "fixation": 0.061899,
    "heterogeneity": 0.768,
    "stage": "stable",
    "stage_1": 0.550902,
    "stage_2": 0.443065,
    "stage_3": 0.006033,
  },
  {
    "convergence": 0.065078,
    "depth": 7,
    "divergence": 1,
    "drift": 0.194676,
    "fixation": 0.079154,
    "heterogeneity": 0.731429,
    "stage": "stable",
    "stage_1": 0.555236,
    "stage_2": 0.434384,
    "stage_3": 0.01038,
  },
  {
    "convergence": 0.065078,
    "depth": 8,
    "divergence": 1,
    "drift": 0.233209,
    "fixation": 0.075238,
    "heterogeneity": 0.731429,
    "stage": "stable",
    "stage_1": 0.555236,
    "stage_2": 0.434384,
    "stage_3": 0.01038,
  },
  {
    "convergence": 0.083699,
    "depth": 9,
    "divergence": 1,
    "drift": 0.231888,
    "fixation": 0.091159,
    "heterogeneity": 0.711111,
    "stage": "stable",
    "stage_1": 0.554799,
    "stage_2": 0.430561,
    "stage_3": 0.01464,
  },
  {
    "convergence": 0.083699,
    "depth": 10,
    "divergence": 1,
    "drift": 0.266699,
    "fixation": 0.086043,
    "heterogeneity": 0.711111,
    "stage": "stable",
    "stage_1": 0.554799,
    "stage_2": 0.430561,
    "stage_3": 0.01464,
  },
]
`;

exports[`Pipeline Regression — golden fixtures > avoidance: user void on non-void original → void_mod 0.7 1`] = `
[
  {
    "engine": {
      "alignment": 0,
      "bucket": "LOW",
      "level": 0,
      "mismatch": "emotion_mismatch",
      "pattern": "contradiction",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 3,
      "isFallback": false,
    },
  },
]
`;

exports[`Pipeline Regression — golden fixtures > bridge: moderate alignment → MID bucket 1`] = `
[
  {
    "engine": {
      "alignment": 0.827586,
      "bucket": "HIGH",
      "level": 0.827586,
      "mismatch": null,
      "pattern": "echo_follow",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 1,
      "isFallback": false,
    },
  },
  {
    "engine": {
      "alignment": 0.394676,
      "bucket": "MID",
      "level": 0.394676,
      "mismatch": null,
      "pattern": "bridge",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 4,
      "isFallback": false,
    },
  },
  {
    "engine": {
      "alignment": 0.155196,
      "bucket": "MID",
      "level": 0.258735,
      "mismatch": null,
      "pattern": "bridge",
      "shape": 0.599824,
      "shape_active": true,
      "void_mod": 1,
    },
    "nav": {
      "index": 4,
      "isFallback": true,
    },
  },
]
`;

exports[`Pipeline Regression — golden fixtures > contradiction: opposite emotions → LOW, pattern contradiction/bridge 1`] = `
[
  {
    "engine": {
      "alignment": 0,
      "bucket": "LOW",
      "level": 0,
      "mismatch": "emotion_mismatch",
      "pattern": "contradiction",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 4,
      "isFallback": false,
    },
  },
  {
    "engine": {
      "alignment": 0.019612,
      "bucket": "LOW",
      "level": 0.019612,
      "mismatch": "emotion_mismatch",
      "pattern": "contradiction",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 3,
      "isFallback": false,
    },
  },
  {
    "engine": {
      "alignment": 0,
      "bucket": "LOW",
      "level": 0.046676,
      "mismatch": "emotion_mismatch",
      "pattern": "contradiction",
      "shape": 0,
      "shape_active": true,
      "void_mod": 1,
    },
    "nav": {
      "index": 3,
      "isFallback": false,
    },
  },
  {
    "engine": {
      "alignment": 0,
      "bucket": "LOW",
      "level": 0,
      "mismatch": "emotion_mismatch",
      "pattern": "contradiction",
      "shape": 0,
      "shape_active": true,
      "void_mod": 1,
    },
    "nav": {
      "index": 4,
      "isFallback": true,
    },
  },
]
`;

exports[`Pipeline Regression — golden fixtures > displacement: same emotions but reversed trajectory 1`] = `
[
  {
    "engine": {
      "alignment": 0.996438,
      "bucket": "HIGH",
      "level": 0.996438,
      "mismatch": null,
      "pattern": "echo_follow",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 0,
      "isFallback": true,
    },
  },
  {
    "engine": {
      "alignment": 0.499817,
      "bucket": "MID",
      "level": 0.499817,
      "mismatch": null,
      "pattern": "bridge",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 0,
      "isFallback": false,
    },
  },
  {
    "engine": {
      "alignment": 0.330811,
      "bucket": "MID",
      "level": 0.331807,
      "mismatch": null,
      "pattern": "bridge",
      "shape": 0.996999,
      "shape_active": true,
      "void_mod": 1,
    },
    "nav": {
      "index": 4,
      "isFallback": true,
    },
  },
]
`;

exports[`Pipeline Regression — golden fixtures > echo_follow: near-identical emotions → HIGH alignment 1`] = `
[
  {
    "engine": {
      "alignment": 0.997339,
      "bucket": "HIGH",
      "level": 0.997339,
      "mismatch": null,
      "pattern": "echo_follow",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 1,
      "isFallback": false,
    },
  },
  {
    "engine": {
      "alignment": 0.497253,
      "bucket": "MID",
      "level": 0.497253,
      "mismatch": null,
      "pattern": "bridge",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 4,
      "isFallback": true,
    },
  },
  {
    "engine": {
      "alignment": 0.331545,
      "bucket": "MID",
      "level": 0.332146,
      "mismatch": null,
      "pattern": "bridge",
      "shape": 0.99819,
      "shape_active": true,
      "void_mod": 1,
    },
    "nav": {
      "index": 4,
      "isFallback": true,
    },
  },
  {
    "engine": {
      "alignment": 0.247198,
      "bucket": "MID",
      "level": 0.248113,
      "mismatch": null,
      "pattern": "bridge",
      "shape": 0.99631,
      "shape_active": true,
      "void_mod": 1,
    },
    "nav": {
      "index": 4,
      "isFallback": true,
    },
  },
]
`;

exports[`Pipeline Regression — golden fixtures > fixation: repeated identical emotions → FIXATED bucket 1`] = `
[
  {
    "engine": {
      "alignment": 1,
      "bucket": "HIGH",
      "level": 1,
      "mismatch": null,
      "pattern": "echo_follow",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 1,
      "isFallback": false,
    },
  },
  {
    "engine": {
      "alignment": 0.5,
      "bucket": "HIGH",
      "level": 0.5,
      "mismatch": null,
      "pattern": "echo_follow",
      "shape": 1,
      "shape_active": false,
      "void_mod": 1,
    },
    "nav": {
      "index": 1,
      "isFallback": false,
    },
  },
  {
    "engine": {
      "alignment": 0,
      "bucket": "LOW",
      "level": 0.333333,
      "mismatch": null,
      "pattern": "bridge",
      "shape": 0,
      "shape_active": true,
      "void_mod": 1,
    },
    "nav": {
      "index": 1,
      "isFallback": false,
    },
  },
  {
    "engine": {
      "alignment": 0,
      "bucket": "FIXATED",
      "level": 0.25,
      "mismatch": null,
      "pattern": "fixation",
      "shape": 0,
      "shape_active": true,
      "void_mod": 1,
    },
    "nav": {
      "index": 1,
      "isFallback": false,
    },
  },
]
`;

exports[`SceneNavigator — pattern-geometry regression > avoidance: navigate returns consistent result 1`] = `
{
  "index": 1,
  "isFallback": true,
  "pattern": "avoidance",
}
`;

exports[`SceneNavigator — pattern-geometry regression > bridge: navigate returns consistent result 1`] = `
{
  "index": 2,
  "isFallback": false,
  "pattern": "bridge",
}
`;

exports[`SceneNavigator — pattern-geometry regression > contradiction: navigate returns consistent result 1`] = `
{
  "index": 3,
  "isFallback": false,
  "pattern": "contradiction",
}
`;

exports[`SceneNavigator — pattern-geometry regression > displacement: navigate returns consistent result 1`] = `
{
  "index": 1,
  "isFallback": false,
  "pattern": "displacement",
}
`;

exports[`SceneNavigator — pattern-geometry regression > echo_follow: navigate returns consistent result 1`] = `
{
  "index": 2,
  "isFallback": false,
  "pattern": "echo_follow",
}
`;

exports[`SceneNavigator — pattern-geometry regression > fixation: navigate returns consistent result 1`] = `
{
  "index": 1,
  "isFallback": false,
  "pattern": "fixation",
}
`;
